--- a/sources/styles-canva.css
+++ b/sources/styles-canva.css
@@ -15,5 +15,4 @@ body, html {
 .CanvaDiv{
     position: relative;
     top: 5%;
-    background-color: red;
 }
